// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitButton must match the snapshot with default Props 1`] = `
<RedButtonStyle
  disabled={false}
  form="foo"
  type="submit"
>
  <IconWrapperStyle
    aria-hidden={true}
  >
    SvgThumbsUp
  </IconWrapperStyle>
  bar
</RedButtonStyle>
`;

exports[`SubmitButton must return the diff between when disabled 1`] = `
Snapshot Diff:
- First value
+ Second value

- <RedButtonStyle
-   disabled={false}
+ <GreyButtonStyle
+   disabled={true}
    form="foo"
    type="submit"
  >
    <IconWrapperStyle
      aria-hidden={true}
    >
      SvgThumbsUp
    </IconWrapperStyle>
    bar
- </RedButtonStyle>
+ </GreyButtonStyle>
`;
